Changes for 1.9

 - [DEV-444] added optional suppressing of processing of older data in log[], logrt[] and eventlog[] (Sasha)

Changes for 1.8.2

 - [ZBXNEXT-238] added a command line option to zabbix_sender to send metrics in real time when reading from stdin (asaveljevs)
 - [ZBX-1000] enabled zabbix_sender to read its input from stdin; thanks to leo (asaveljevs)
 - [ZBX-2011] fixed e-mail sending format to meet 'SMTP/MIME e-mail' standards since UTF-8 is used. Thanks to Olexiy Zagorskiy. (Dmitry)
 - [ZBX-2136] fixed handling of logitems with logtimefmt in db cache (asaveljevs)
 - [ZBX-2193] updated Russian translation; thanks to dotneft (Richlv)
 - [ZBX-2185] added view of parent template of linked template to host (Aly)
 - [ZBX-2179] fixed errors connected with Triggers Info screen element (Vedmak)
 - [ZBX-2184] added maintenance info to dashboard latest issues (Aly)
 - [ZBX-1772] changed frontend timezone to match PHP server (Aly)
 - [DEV-455] added configurable filter to "Status of triggers" screen element (Aly)
 - [DEV-454] implemented screen export (Aly)
 - [ZBX-2144] fixed internal and aggregate checks for hosts monitored by a proxy (asaveljevs)
 - [ZBX-2052] fixed sending of regexps to agents (asaveljevs,Sasha)
 - [ZBX-2129] fixed links from monitoring to configuration when All nodes are selected (Vedmak)
 - [ZBX-2146] fixed error when try to view slideshow without slides (Vedmak)
 - [ZBX-2161] added permission checks for map link triggers (Vedmak)
 - [ZBX-2169] fixed adding dependencies to triggers on mass update (Aly)
 - [ZBX-2157] fixed script permissions (Vedmak)
 - [ZBX-2135] fixed screens ignore nodes "All" option in selection dropdown (Vedmak)
 - [ZBX-1954] fixed config file errors if special chars are used in db password (Vedmak)
 - [ZBX-2075] admins now have access only to users they share usergroup with [action operations] (Vedmak)
 - [ZBX-2147] fixed permission check for item configuration (Vedmak)
 - [ZBX-2158] fixed map image deletion (Vedmak)